// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commit: first feature added in fixed mode --conventional-commits --force-publish=* 1`] = `
"v1.1.0
"
`;

exports[`commit: first feature added in fixed mode --conventional-commits 1`] = `
"v1.1.0
"
`;

exports[`commit: initial commit in fixed mode --conventional-commits --force-publish=* 1`] = `
"v1.0.1
"
`;

exports[`commit: initial commit in fixed mode --conventional-commits 1`] = `
"v1.0.1
"
`;

exports[`commit: second feature added in fixed mode --conventional-commits --force-publish=* 1`] = `
"v1.2.0
"
`;

exports[`commit: second feature added in fixed mode --conventional-commits 1`] = `
"v1.2.0
"
`;

exports[`commit: updates fixed versions 1`] = `
"v1.0.1
"
`;

exports[`commit: updates independent versions 1`] = `
"Publish

 - package-1@2.0.0
 - package-2@3.0.0
 - package-3@4.0.0
 - package-4@5.0.0
 - package-5@6.0.0
"
`;

exports[`packages: first feature added in fixed mode --conventional-commits --force-publish=* 1`] = `
Array [
  Object {
    "foo": true,
    "name": "package-1",
    "version": "1.1.0",
  },
  Object {
    "name": "package-2",
    "version": "1.1.0",
  },
]
`;

exports[`packages: first feature added in fixed mode --conventional-commits 1`] = `
Array [
  Object {
    "foobar": true,
    "name": "package-1",
    "version": "1.1.0",
  },
  Object {
    "name": "package-2",
    "version": "1.0.1",
  },
]
`;

exports[`packages: initial commit in fixed mode --conventional-commits --force-publish=* 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "1.0.1",
  },
  Object {
    "name": "package-2",
    "version": "1.0.1",
  },
]
`;

exports[`packages: initial commit in fixed mode --conventional-commits 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "1.0.1",
  },
  Object {
    "name": "package-2",
    "version": "1.0.1",
  },
]
`;

exports[`packages: second feature added in fixed mode --conventional-commits --force-publish=* 1`] = `
Array [
  Object {
    "foo": true,
    "name": "package-1",
    "version": "1.2.0",
  },
  Object {
    "bar": true,
    "name": "package-2",
    "version": "1.2.0",
  },
]
`;

exports[`packages: second feature added in fixed mode --conventional-commits 1`] = `
Array [
  Object {
    "foobar": true,
    "name": "package-1",
    "version": "1.1.0",
  },
  Object {
    "baz": true,
    "name": "package-2",
    "version": "1.2.0",
  },
]
`;

exports[`packages: updates all transitive dependents 1`] = `
Array [
  Object {
    "description": "no local dependencies, four local dependents (three transitive)",
    "foo": true,
    "name": "package-1",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Object {
      "package-1": "^2.0.0",
    },
    "description": "one local dependency, one direct dependent, no transitive dependencies",
    "name": "package-2",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Object {
      "package-2": "^2.0.0",
    },
    "description": "one local dependency, one direct dependent, one transitive dependency",
    "name": "package-3",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Object {
      "package-3": "^2.0.0",
    },
    "description": "one local dependency, one direct dependent, two transitive dependencies",
    "name": "package-4",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Object {
      "package-4": "^2.0.0",
    },
    "description": "one local dependency, no dependents, three transitive dependencies",
    "name": "package-5",
    "version": "2.0.0",
  },
]
`;

exports[`packages: updates fixed versions 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^1.0.1",
    },
    "name": "package-2",
    "version": "1.0.1",
  },
  Object {
    "devDependencies": Object {
      "package-2": "^1.0.1",
    },
    "name": "package-3",
    "peerDependencies": Object {
      "package-2": "^1.0.0",
    },
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "name": "package-4",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^1.0.1",
    },
    "name": "package-5",
    "private": true,
    "version": "1.0.1",
  },
]
`;

exports[`packages: updates independent versions 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Object {
      "package-1": "^2.0.0",
    },
    "name": "package-2",
    "version": "3.0.0",
  },
  Object {
    "devDependencies": Object {
      "package-2": "^3.0.0",
    },
    "name": "package-3",
    "version": "4.0.0",
  },
  Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "name": "package-4",
    "version": "5.0.0",
  },
  Object {
    "dependencies": Object {
      "package-3": "^4.0.0",
    },
    "name": "package-5",
    "private": true,
    "version": "6.0.0",
  },
]
`;

exports[`stderr: canary beta version 1`] = `
"lerna info version __TEST_VERSION__
lerna info canary enabled
lerna info current version 1.0.0
lerna info Checking for updated packages...
lerna info Comparing with initial commit.
lerna info Checking for prereleased packages...
lerna info auto-confirmed "
`;

exports[`stderr: canary default version 1`] = `
"lerna info version __TEST_VERSION__
lerna info canary enabled
lerna info current version 1.0.0
lerna info Checking for updated packages...
lerna info Comparing with initial commit.
lerna info Checking for prereleased packages...
lerna info auto-confirmed "
`;

exports[`stderr: exit 0 when no updates 1`] = `
"lerna info version __TEST_VERSION__
lerna info current version 1.0.0
lerna info Checking for updated packages...
lerna info Comparing with v1.0.0.
lerna info Checking for prereleased packages...
lerna info No updated packages to publish. "
`;

exports[`stderr: updates fixed versions 1`] = `
"lerna info version __TEST_VERSION__
lerna info current version 1.0.0
lerna info Checking for updated packages...
lerna info Comparing with initial commit.
lerna info Checking for prereleased packages...
lerna info auto-confirmed "
`;

exports[`stderr: updates independent versions 1`] = `
"lerna info version __TEST_VERSION__
lerna info versioning independent
lerna info Checking for updated packages...
lerna info Comparing with initial commit.
lerna info Checking for prereleased packages...
lerna info auto-confirmed "
`;

exports[`stdout: canary beta version 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.1.0-beta.hash
 - package-2: 1.0.0 => 1.1.0-beta.hash
 - package-3: 1.0.0 => 1.1.0-beta.hash
 - package-4: 1.0.0 => 1.1.0-beta.hash
 - package-5: 1.0.0 => 1.1.0-beta.hash (private)
"
`;

exports[`stdout: canary default version 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.1.0-alpha.hash
 - package-2: 1.0.0 => 1.1.0-alpha.hash
 - package-3: 1.0.0 => 1.1.0-alpha.hash
 - package-4: 1.0.0 => 1.1.0-alpha.hash
 - package-5: 1.0.0 => 1.1.0-alpha.hash (private)
"
`;

exports[`stdout: exit 0 when no updates 1`] = `""`;

exports[`stdout: first feature added in fixed mode --conventional-commits --force-publish=* 1`] = `
"
Changes:
 - package-1: 1.0.1 => 1.1.0
 - package-2: 1.0.1 => 1.1.0
"
`;

exports[`stdout: first feature added in fixed mode --conventional-commits 1`] = `
"
Changes:
 - package-1: 1.0.1 => 1.1.0
"
`;

exports[`stdout: initial commit in fixed mode --conventional-commits --force-publish=* 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.0.1
 - package-2: 1.0.0 => 1.0.1
"
`;

exports[`stdout: initial commit in fixed mode --conventional-commits 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.0.1
 - package-2: 1.0.0 => 1.0.1
"
`;

exports[`stdout: second feature added in fixed mode --conventional-commits --force-publish=* 1`] = `
"
Changes:
 - package-1: 1.1.0 => 1.2.0
 - package-2: 1.1.0 => 1.2.0
"
`;

exports[`stdout: second feature added in fixed mode --conventional-commits 1`] = `
"
Changes:
 - package-2: 1.1.0 => 1.2.0
"
`;

exports[`stdout: updates all transitive dependents 1`] = `
"
Changes:
 - package-1: 1.0.0 => 2.0.0
 - package-2: 1.0.0 => 2.0.0
 - package-3: 1.0.0 => 2.0.0
 - package-4: 1.0.0 => 2.0.0
 - package-5: 1.0.0 => 2.0.0
"
`;

exports[`stdout: updates fixed versions 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.0.1
 - package-2: 1.0.0 => 1.0.1
 - package-3: 1.0.0 => 1.0.1
 - package-4: 1.0.0 => 1.0.1
 - package-5: 1.0.0 => 1.0.1 (private)
"
`;

exports[`stdout: updates independent versions 1`] = `
"
Changes:
 - package-1: 1.0.0 => 2.0.0
 - package-2: 2.0.0 => 3.0.0
 - package-3: 3.0.0 => 4.0.0
 - package-4: 4.0.0 => 5.0.0
 - package-5: 5.0.0 => 6.0.0 (private)
"
`;
